# ibrl-docker

./: Dockerfile  README.md  requirements.txt  train_bc_trossen.py  train_rl.py  train_rl_trossen.py
bc/: dataset_trossen.py  multiview_encoder.py
debug/: debu.txt  file_hdf5_opener_dynamic.py  hdf5_opener.py  numbers_demos.py
env/: robosuite_wrapper.py  trossen_wrapper.py
evaluate/: __init__.py  multi_process_eval.py  single_process_eval.py
networks/: encoder.py  min_vit.py
release/cfgs/trossen/: transfer_cube_task.yaml
release/cfgs/trossen_bc/: transfer_cube_task.yaml
rl/: q_agent.py  q_agent_mult_cameras.py  replay.py  replay_trossen.py
sim_recorder/: .gitignore  COMMANDS.md  QUICKSTART_INTEGRATED.md  README.md  RECORDING_GUIDE.md
sim_recorder/assets/: trossen_ai_joint.xml  trossen_ai_scene_joint.xml
sim_recorder/assets/meshes/: carriage_right.stl
sim_recorder/examples/: convert_to_serl_pickle.py  inspect_episode.py  integrated_teleop_recorder.py  teleop_with_server.py
sim_recorder/server/: app.py  recorder.py  teleop_ingest.py
sim_recorder/server/utils/: utils.py
sim_recorder/ui/: index.html  main.js  styles.css
sim_recorder_2/: ARCHITECTURE.md  README.md  TESTING_GUIDE.md  config.yaml  requirements.txt
sim_recorder_2/assets/meshes/: gripper_right.stl
sim_recorder_2/examples/: teleop_with_server.py  test_teleop_sim.py
sim_recorder_2/server/: app.py  cameras.py  recorder.py
sim_recorder_2/tests/: test_integrated_recorder.py  test_teleop_sim.py  test_zeromq_recorder.py
sim_recorder_2/ui/: index.html  main.js  styles.css
sim_recorder_2/utils/: __init__.py
trossen_arm/: .gitignore  CMakeLists.txt  LICENSE-3RD-PARTY.txt  Makefile  README.md  package.xml
trossen_arm/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
trossen_arm/.github/workflows/: docs.yaml
trossen_arm/cmake/: Docs.cmake  Packaging.cmake  libtrossen_armConfig.cmake.in  libtrossen_armVersion.cmake
trossen_arm/demos/cpp/: CMakeLists.txt  README.md  cartesian_external_effort.cpp  cartesian_position.cpp  cartesian_velocity.cpp  configuration_in_yaml.cpp  configure_cleanup.cpp  default_configurations_vxai_v0.yaml  error_recovery_and_logging.cpp  gravity_compensation.cpp  gravity_compensation_partial.cpp  gripper_torque.cpp  joint_characteristics_finetune.cpp  mixed_interpolation_space.cpp  set_factory_reset_flag.cpp  set_ip_method.cpp  set_joint_characteristics.cpp  set_joint_limits.cpp  set_manual_ip.cpp  set_mode.cpp  simple_move.cpp  teleoperation.cpp
trossen_arm/demos/python/: cartesian_external_effort.py  cartesian_position.py  cartesian_velocity.py  configuration_in_yaml.py  configure_cleanup.py  default_configurations_wxai_v0.yaml  error_recovery_and_logging.py  gravity_compensation.py  gravity_compensation_partial.py  gripper_torque.py  joint_characteristics_finetune.py  mixed_interpolation_space.py  move.py  move_two.py  set_factory_reset_flag.py  set_ip_method.py  set_joint_characteristics.py  set_joint_limits.py  set_manual_ip.py  set_mode.py  simple_move.py  teleoperation.py
trossen_arm/docs/: BUILDING.md  changelog.rst  community.rst  conf.py  downloads.rst  getting_started.rst  index.rst  requirements.txt  service.rst  specifications.rst  troubleshooting.rst  tutorials.rst
trossen_arm/docs/_data/: trossen_arm_bringup.csv  trossen_arm_description.csv  trossen_arm_moveit.csv
trossen_arm/docs/_static/: tr_style.css
trossen_arm/docs/_templates/: versions.html
trossen_arm/docs/getting_started/: configuration.rst  demo_scripts.rst  hardware_setup.rst  software_setup.rst
trossen_arm/docs/tutorials/: lerobot.rst  openpi.rst  ros2.rst  trossen_arm_mujoco.rst  trossen_data_collection_ui.rst
trossen_arm/docs/tutorials/lerobot/: changelog.rst  configuration.rst  record_episode.rst  replay.rst  setup.rst  teleoperation.rst  train_and_evaluate.rst  visualize.rst
trossen_arm/docs/tutorials/ros2/: bringup.rst  description.rst  moveit.rst  setup.rst
trossen_arm/include/libtrossen_arm/: trossen_arm.hpp  trossen_arm_type.hpp
trossen_arm_mujoco/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
trossen_arm_mujoco/trossen_arm_mujoco/: constants.py  ee_sim_env.py  ee_sim_env_off_rendering.py  ee_sim_env_test.py  scripted_policy.py  sim_env.py  utils.py
trossen_arm_mujoco/trossen_arm_mujoco/assets/: trossen_ai_bimanual.xml  trossen_ai_scene.xml  wxai_follower.xml
trossen_arm_mujoco/trossen_arm_mujoco/scripts/: record_sim_episodes.py  replay_episode_real.py  visualize_eps.py
trossen_sim/trossen_sim/envs/xmls/: carriage_left.stl  gripper_left.stl  link_4.stl  link_5.stl  link_6.stl  trossen_ai_scene_joint.xml  wxai_follower.urdf
trossen_sim/trossen_sim/envs/xmls/meshes/: base_link.stl  camera_mount_d405.stl  link_1.stl  link_2.stl  link_3.stl
trossen_sim_teleop/: README.md  dual_robot_teleop_sim.py  dual_robot_teleop_sim_ee.py  dual_robot_teleop_sim_joint.py  single_robot_teleop_sim.py
